[project]
name = "moku-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Moku device control"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sealab Team" }
]
license = { text = "MIT" }

dependencies = [
    # Core MCP SDK
    "mcp>=1.0.0",

    # Moku Models (1st party)
    "moku-models @ git+https://github.com/sealablab/moku-models.git",

    # Moku Hardware API (1st party)
    "moku>=3.0.0",

    # Data Validation
    "pydantic>=2.0.0",

    # Logging
    "loguru>=0.7.0",

    # Device Discovery
    "zeroconf>=0.132.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatchling.build.targets.wheel]
packages = ["src/moku_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
